@@ -29,7 +29,7 @@ class popup_questions_for_me_to_create implements renderable, templatable {
         // this would work, but is not feasable to write like this
         // The problem with $data->questions_to_create = $this->questions_to_create; is that there is an associative array, e.g. 3 => stdClass(), 10 => stdClass() etc.... it MUST start counting at 0, otherwise it will break mustache
         $data->questions_to_create = array_values($this->questions_to_create);
-        foreach ($data->questions_to_create as $question){
+        foreach ($data->questions_to_create as $id => $question){
             $question->comma = true;
         }
         if(isset($data->questions_to_create) && !empty($data->questions_to_create)){
