@@ -18,19 +18,30 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="modal-body-requests">
                 <p>{{#str}}
                     questions_for_me_to_create, block_exaquest {{/str}}
                     <br>
                     {{#questions_to_create}}
-                        <br>
-                        - {{comment}}
+                        <p class="request-comment" id="request-comment-p-{{id}}">
+                            - {{comment}}
+                            <a id="request-comment-a-{{id}}" class="mark-request-as-done-button"
+                               href="#"
+                               title="{{#str}} mark_as_done, block_exaquest {{/str}}"
+                               requestid = {{id}}
+                               role="button"
+                               aria-label="{{#str}} mark_as_done, block_exaquest {{/str}}">
+                            <span class="normal-icon">{{#pix}} t/markasread, core {{/pix}}</span>
+                        </a>
+                        </p>
+
+<!--                        <a href="#" class="mark-request-as-done-button">{{#pix}} t/markasread, core, mark as done {{/pix}}</a>-->
                     {{/questions_to_create}}
-                    <br><br><br>
-                    TODO: was sollen wir hier machen können? Wie soll geprüft werden, welche Frage bereits abgearbeitet ist... das muss fast händisch passieren.
+                <div id="popup_create_questions_div">TODO: get a button to create questions here</div>
                 </p>
             </div>
             <div class="modal-footer">
+
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
